WIP #13: formulário de autenticação

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,11 +8,10 @@
 
 	<ui:define name="content">
 		<h1>Portal de Apoio</h1>
-		<div class="p-grid">
-			<div class="p-col-12 p-md-8">
-
-				<div class="p-grid">
-					<p:outputPanel styleClass="p-col-12 p-md-4">
+		<div class="grid">
+			<div class="col-12 md:col-8">
+				<div class="grid">
+					<p:outputPanel styleClass="col-12 md:col-4">
 						<div class="card-single p-shadow-1">
 							<div>
 								<h2>Principal</h2>
@@ -29,7 +28,7 @@
 				</div>
 
 			</div>
-			<div class="p-col-12 p-md-4">
+			<div class="col-12 md:col-4">
 
 				<style>
 					.ui-widget-content ul {
