--- a/src/main/webapp/pesquisa/administracao/fontes-financiadoras.xhtml
+++ b/src/main/webapp/pesquisa/administracao/fontes-financiadoras.xhtml
@@ -22,7 +22,9 @@
 
 				<p:column headerText="Descrição" field="descricao" style="width: 30%; text-align: center" />
 
-                <p:column headerText="Ativa" field="ativa" style="width: 10%; text-align: center" />
+                <p:column headerText="Ativa" style="width: 10%; text-align: center">
+                    <h:outputText value="#{fonte.ativa ? 'SIM' : 'NÃO'}" />
+                </p:column>
 
 				<p:column headerText="Ações" style="width:20%; text-align: center">
 					<p:commandButton id="btnEdita"
