WIP #23: adiciona tela para listagem e dialog para cadastro/edição de CBO

--- a/src/main/webapp/pesquisa/administracao/dialog-cbo.xhtml
+++ b/src/main/webapp/pesquisa/administracao/dialog-cbo.xhtml
@@ -12,7 +12,23 @@
 			  appendTo="@(body)"
 			  modal="true">
 
-        <h2>Em construção...</h2>
+		<h:form id="formCbo">
+			<div class="ui-fluid formgrid grid">
+				<div class="field col-12">
+					<p:outputLabel for="descricao" value="Descrição:" />
+					<p:inputText id="descricao"
+								 value="#{cbosController.cbo.descricao}" />
+				</div>
+
+				<div class="field col-2">
+					<p:commandButton id="btnSalva"
+									 icon="pi pi-save"
+									 action="#{cbosController.salva}"
+									 update="formCbos"
+									 value="Salvar" />
+				</div>
+			</div>
+		</h:form>
 
 	</p:dialog>
 </ui:composition>
