--- a/src/main/webapp/pesquisa/administracao/cbos.xhtml
+++ b/src/main/webapp/pesquisa/administracao/cbos.xhtml
@@ -1,16 +1,37 @@
 <ui:composition template="/templates/default.xhtml"
-	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+				xmlns="http://www.w3.org/1999/xhtml"
+				xmlns:h="http://xmlns.jcp.org/jsf/html"
+				xmlns:p="http://primefaces.org/ui"
+				xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<ui:define name="content">
-		<h2>Cadastro de CBOs</h2>
+		<h2>CBOs</h2>
 
-        <h3>Em construção...</h3>
+		<h:form id="formCbos">
+			<div class="ui-fluid formgrid grid">
+				<div class="field col-2">
+					<p:commandButton id="btnNova" value="Nova" icon="pi pi-plus"
+									 action="#{cbosController.openDialogNova}"
+									 update="dialogCbo"/>
+				</div>
+			</div>
 
-        <h3>#{cbosController.mensagem}</h3>
+			<p:dataTable id="tblCbos" var="cbo" value="#{cbosController.cbos}"
+						 emptyMessage="Nenhum registro encontrado.">
+				<p:column headerText="Código" field="id" style="width: 10%; text-align: center"/>
 
-		<ui:include src="dialog-cbo.xhtml" />
+				<p:column headerText="Descrição" field="descricao" style="width: 40%; text-align: center"/>
+
+				<p:column headerText="Ações" style="width:20%; text-align: center">
+					<p:commandButton id="btnEdita"
+									 icon="pi pi-pencil"
+									 action="#{cbosController.editaCbo(cbo)}"
+									 update="dialogCbo"
+									 title="Editar"/>
+				</p:column>
+			</p:dataTable>
+		</h:form>
+
+		<ui:include src="dialog-cbo.xhtml"/>
 	</ui:define>
 </ui:composition>
