--- a/src/main/webapp/pesquisa/administracao/status-projeto.xhtml
+++ b/src/main/webapp/pesquisa/administracao/status-projeto.xhtml
@@ -7,9 +7,29 @@
 	<ui:define name="content">
 		<h2>Status de Projeto</h2>
 
-        <h3>Em construção...</h3>
+		<h:form id="formStatusProjeto">
+			<div class="ui-fluid formgrid grid">
+				<div class="field col-2">
+					<p:commandButton id="btnNova" value="Nova" icon="pi pi-plus"
+						action="#{statusProjetoController.openDialogNova}" update="dialogStatusProjeto"
+					/>
+				</div>	
+			</div>
+		
+			<p:dataTable id="tblStatusProjeto" var="status" value="#{statusProjetoController.status}"
+							emptyMessage="Nenhum registro encontrado.">
+				<p:column headerText="Código" field="id" style="width: 10%; text-align: center" />
 
-        <h3>#{statusProjetoController.mensagem}</h3>
+				<p:column headerText="Descrição" field="descricao" style="width: 30%; text-align: center"/>
+				
+				<p:column headerText="Ações" style="width:20%; text-align: center">
+					<p:commandButton id="btnEdita" icon="pi pi-pencil" 
+					action="#{statusProjetoController.editaStatus(status)}"
+					update="dialogStatusProjeto"
+					title="Editar"/>
+				</p:column>
+			</p:dataTable>
+		</h:form>
 
 		<ui:include src="dialog-status-projeto.xhtml" />
 	</ui:define>
