--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,6 +7,7 @@
 
 
 	<ui:define name="content">
+        <h1>#{avisosController.userInRole()}</h1>
 		<h1>Portal de Apoio</h1>
 		<div class="grid">
 			<div class="col-12 md:col-8">
