--- a/src/main/webapp/pesquisa/administracao/orgaos-financiadores.xhtml
+++ b/src/main/webapp/pesquisa/administracao/orgaos-financiadores.xhtml
@@ -7,9 +7,31 @@
 	<ui:define name="content">
 		<h2>Órgãos Financiadores</h2>
 
-        <h3>Em construção...</h3>
+        <h:form id="formOrgaosFinanciadores">
+            <div class="ui-fluid formgrid grid">
+                <div class="field col-2">
+                    <p:commandButton id="btnNova" value="Novo" icon="pi pi-plus"
+                                     action="#{orgaosFinanciadoresController.openDialogNova}"
+                                     update="dialogOrgaoFinanciador" />
+                </div>
+            </div>
 
-        <h3>#{orgaosFinanciadoresController.mensagem}</h3>
+            <p:dataTable id="tblOrgaosFinanciadores" var="orgao" value="#{orgaosFinanciadoresController.orgaos}"
+                         emptyMessage="Nenhum registro encontrado.">
+                <p:column headerText="Código" field="id" style="width: 10%; text-align: center"  />
+
+                <p:column headerText="Nome" field="descricao" style="width: 70%; text-align: center" />
+
+                <p:column headerText="Ações:" style="width:20%; text-align: center">
+                    <p:commandButton id="btnEdita"
+                                     icon="pi pi-pencil"
+                                     action="#{orgaosFinanciadoresController.editaOrgao(orgao)}"
+                                     update="dialogOrgaoFinanciador"
+                                     title="Editar" />
+                </p:column>
+
+            </p:dataTable>
+        </h:form>
 
 		<ui:include src="dialog-orgao-financiador.xhtml" />
 	</ui:define>
